samples/_failures_safe/1761045328_225978_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e890907.c: In function ‘main’:
./samples/SAFE/__tmp_3e890907.c:139: error: expected ‘{’ at end of input
